[project]
name = "opsmindai_crew"
version = "0.1.0"
description = "opsmindai_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
opsmindai_crew = "opsmindai_crew.main:run"
run_crew = "opsmindai_crew.main:run"
train = "opsmindai_crew.main:train"
replay = "opsmindai_crew.main:replay"
test = "opsmindai_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
