[project]
name = "opsmindai_crew"
version = "0.1.0"
description = "opsmindai_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "fastapi",
    "uvicorn[standard]",
    "reportlab>=4.0.0",
    "plotly>=5.17.0",
    "kaleido>=0.2.1",
    "requests>=2.31.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.6"
]

[project.scripts]
opsmindai_crew = "opsmindai_crew.main:run"
run_crew = "opsmindai_crew.main:run"
train = "opsmindai_crew.main:train"
replay = "opsmindai_crew.main:replay"
test = "opsmindai_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
